@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200119"
-#define public MagickPackageReleaseDate "snapshot-20200119"
+#define public MagickPackageVersionAddendum ".020200124"
+#define public MagickPackageReleaseDate "snapshot-20200124"
