@@ -1,7 +1,12 @@
+2020-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/gradient.c (GradientImage): Warnings reduction, plus note
+	about incorrect diagonal gradients math.
+
 2020-01-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
-	* VisualMagick\configure\configure.cpp Option /arch:SSE2 is available only
-	for 32 bit build.
+	* VisualMagick\configure\configure.cpp Option /arch:SSE2 is
+	available only for 32 bit build.
 
 2020-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
